2020-02-28 Jan Kotanski <jan.kotanski@desy.de>
	* fix for loading Nexus files with unknown extension
	* add @debugmethod statement back
	* tagged as 2.36.1

2020-02-28 Jan Kotanski <jan.kotanski@desy.de>
	* add support DATA_READY_EVENT in Tango Events image source
	* tagged as 2.36.0

2020-02-27 Jan Kotanski <jan.kotanski@desy.de>
	* tune long debug printout
	* tagged as 2.35.8

2020-02-27 Jan Kotanski <jan.kotanski@desy.de>
	* fix for debug class method
	* tagged as 2.35.7

2020-02-26 Jan Kotanski <jan.kotanski@desy.de>
	* impove logger and add liveViewer.sardanaUtils and imageSource logging
	* make py2/py3 compatibility for sardana
	* tagged as 2.35.6

2020-02-25 Jan Kotanski <jan.kotanski@desy.de>
	* add globallogger
	* impove epicspv configuration
	* tagged as 2.35.5

2020-02-22 Jan Kotanski <jan.kotanski@desy.de>
	* update help
	* tagged as 2.35.4

2020-02-21 Jan Kotanski <jan.kotanski@desy.de>
	* set refreshrate for tine
	* tagged as 2.35.3

2020-02-20 Jan Kotanski <jan.kotanski@desy.de>
	* fix for source status
	* tagged as 2.35.2

2020-02-20 Jan Kotanski <jan.kotanski@desy.de>
	* tune widget text
	* tagged as 2.35.1

2020-02-20 Jan Kotanski <jan.kotanski@desy.de>
	* add Tine Property image source
	* add Epics PV image source
	* tagged as 2.35.0

2020-02-06 Jan Kotanski <jan.kotanski@desy.de>
	* add float type option
	* add configuration for crosshair locker
	* improve warning catching
	* tagged as 2.34.0

2020-01-31 Jan Kotanski <jan.kotanski@desy.de>
	* impove setting of sardana variables
	* tagged as 2.33.12

2020-01-15 Jan Kotanski <jan.kotanski@desy.de>
	* fix shape of LIMA VIDEO decoder
	* tagged as 2.33.11

2020-01-15 Jan Kotanski <jan.kotanski@desy.de>
	* fix reshaping of LIMA VIDEO images
	* tagged as 2.33.10

2020-01-14 Jan Kotanski <jan.kotanski@desy.de>
	* add support for variance with NAN
	* tagged as 2.33.9

2020-01-10 Jan Kotanski <jan.kotanski@desy.de>
	* fix for start/stop button update
	* tagged as 2.33.8
