@@ -1,6 +1,7 @@
 2020-02-28 Jan Kotanski <jan.kotanski@desy.de>
 	* fix for loading Nexus files with unknown extension
 	* add @debugmethod statement back
+	* add timeout tho HTTPsource
 	* tagged as 2.36.1
 
 2020-02-28 Jan Kotanski <jan.kotanski@desy.de>
